--- a/5.html
+++ b/5.html
@@ -58,5 +58,6 @@
      <h3>Шрек9</h3></div>
         </div>
         </div>
+        <footer><h3>WOW Teachers (м. Конотоп). 2018</h3></footer>
     </body>
 </html>
