Added background-image examples

--- a/5.html
+++ b/5.html
@@ -9,7 +9,7 @@
     <div id="main">
     <header>
             <h1>5. Блоки в HTML</h1>
-        <img src="header.jpg"></header>
+        <img src="css/header.jpg"></header>
 <nav>
 			    <ul>
 			        <li><a href="#">Головна</a></li>
@@ -29,6 +29,7 @@
 			</nav>
         
  <div id="tileblock">
+     <h3>Блоки</h3>
      <div>
      <img src="5/5.2/yaak.jpg">
      <h3>Шрек</h3></div>
@@ -56,7 +57,15 @@
       <div>
      <img src="5/5.2/yaak.jpg">
      <h3>Шрек9</h3></div>
+
         </div>
+             <h3>Фон</h3>
+     <div id="scroll">
+         <h1>З покруткою</h1>
+     </div>
+          <div id="noscroll">
+              <h1>Без прокрутки</h1>
+     </div>
         </div>
         <footer><h3>WOW Teachers (м. Конотоп). 2018</h3></footer>
     </body>
