--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div id="main">
     <header>
             <h1>4. Хостинг</h1>
-        <img src="header.jpg"></header>
+                <img src="css/header.jpg">
+    </header>
 
 
 <nav>
