--- a/5.html
+++ b/5.html
@@ -67,6 +67,9 @@
           <div id="noscroll">
               <h1>Без прокрутки</h1>
      </div>
+	                      <div id="multibg">
+              <h1>Фон з декількох зображень</h1>
+     </div>
 	    <div class="button"></div>
         </div>
         <footer><h3>WOW Teachers (м. Конотоп). 2018</h3></footer>
