--- a/5.html
+++ b/5.html
@@ -9,6 +9,7 @@
     <div id="main">
     <header>
             <h1>5. Блоки в HTML</h1>
+	    <img id="logo" src="css/logo-2.png">
         <img src="css/header.jpg"></header>
 <nav>
 			    <ul>
