--- a/5.html
+++ b/5.html
@@ -10,6 +10,7 @@
     <header>
             <h1>5. Блоки в HTML</h1>
 	    <img id="logo" src="css/logo-2.png">
+	    <img id="logo2" src="css/block-WT.png">
         <img src="css/header.jpg"></header>
 <nav>
 			    <ul>
