--- a/5.html
+++ b/5.html
@@ -6,8 +6,7 @@
 <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
-    <div id="main">
-    <header><nav>
+	<nav>
 			    <ul>
 			        <li><a href="#">Головна</a></li>
 			        <li><a href="#">5.1</a>
@@ -24,6 +23,8 @@
                     <li><a href="https:\\brainbasket.org" target="_blank">Brainbasket</a></li>
 			    </ul>
 			</nav>
+    <div id="main">
+    <header>
             <h1>5. Блоки в HTML</h1>
 	    
 	   
