--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <header>
             <h1>4. Хостинг</h1>
                 <img src="css/header.jpg">
+	    <img id="logo2" src="css/block-WT.png">
     </header>
 
 
