--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
             <h1>4. Хостинг</h1>
                 <img src="css/header.jpg">
-	    <img id="logo2" src="css/block-WT.png">
+	     <a href="https://brainbasket.org/wow-teachers/"><img id="logo2" src="css/block-WT.png"></a>
     </header>
 
 
