--- a/7.html
+++ b/7.html
@@ -67,6 +67,8 @@
     <header>
             <h1 id="top">7. Flexbox</h1>
         <img src="css/header.jpg"></header>
+	    	    <a href="https://brainbasket.org/wow-teachers/"><img id="logo2" src="css/block-WT.png"></a>
+
 
         
 <h3>Flexbox-галерея з різними зображеннями</h3>
