--- a/5.html
+++ b/5.html
@@ -20,6 +20,7 @@
 			                <li><a href="5/5.2/background-after.html">Фон (після)</a></li>
 			            </ul></li>
                     <li><a href="index.html">4 заняття</a></li>
+		    <li><a href="7.html">7 заняття</a></li>
                     <li><a href="https:\\brainbasket.org" target="_blank">Brainbasket</a></li>
 			    </ul>
 			</nav>
