--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			                <li><a href="4/4.2/pseudo-selectors-after.html">Псевдо-селектори (після)</a></li>
 			            </ul></li>
                     <li><a href="5.html">5 заняття</a></li>
+		<li><a href="7.html">7 заняття</a></li>
                     <li><a href="https:\\brainbasket.org" target="_blank">Brainbasket</a></li>
 			    </ul>
 			</nav>
