--- a/7.html
+++ b/7.html
@@ -148,6 +148,7 @@
   </div>
 </div>
     </div>
+	    <h1 style="position: sticky; top:60px;">posititon: sticky</h1>
 <h3>Flexbox-галерея з різними зображеннями</h3>
  <div id="galleryblock">
 
