--- a/7.html
+++ b/7.html
@@ -161,32 +161,37 @@
     <img src="css/yaak.jpg" style="width:100%">
     <img src="css/image2.png" style="width:100%">
     <img src="css/image1.png" style="width:100%">
+	      <img src="css/image5.png" style="width:100%">
   </div>
   <div class="column">
     <img src="css/yaak2.jpg" style="width:100%">
     <img src="css/image3.png" style="width:100%">
     <img src="css/image2.png" style="width:100%">
     <img src="css/image1.png" style="width:100%">
-    <img src="css/yaak.jpg" style="width:100%">
+    <img src="css/image5.png" style="width:100%">
+    <img src="css/image4.jpg" style="width:100%">
     <img src="css/header.jpg" style="width:100%">
     <img src="css/yaak.jpg" style="width:100%">
   </div>  
   <div class="column">
+	      <img src="css/image5.png" style="width:100%">
     <img src="css/image1.png" style="width:100%">
-    <img src="css/yaak.jpg" style="width:100%">
+    <img src="css/image4.jpg" style="width:100%">
     <img src="css/header.jpg" style="width:100%">
     <img src="css/yaak.jpg" style="width:100%">
     <img src="css/image3.png" style="width:100%">
     <img src="css/yaak2.jpg" style="width:100%">
     <img src="css/image2.png" style="width:100%">
+	  
   </div>
   <div class="column">
     <img src="css/image3.png" style="width:100%">
     <img src="css/yaak.jpg" style="width:100%">
     <img src="css/image2.png" style="width:100%">
+	      <img src="css/image5.png" style="width:100%">
     <img src="css/yaak2.jpg" style="width:100%">
     <img src="css/header.jpg" style="width:100%">
-    <img src="css/yaak.jpg" style="width:100%">
+    <img src="css/image4.jpg" style="width:100%">
     <img src="css/image1.png" style="width:100%">
   </div>
 </div>
