--- a/7.html
+++ b/7.html
@@ -97,12 +97,12 @@
         max-width: 100%;
     }
 }
-	.flex-container, .flex-container2, {
+	.flex-container, .flex-container2 {
   display: flex;
   background-color: DodgerBlue;
 }
 
-.flex-container > div, .flex-container2 > div,  {
+.flex-container > div, .flex-container2 > div  {
   background-color: #f1f1f1;
   margin: 10px;
   padding: 20px;
