--- a/7.html
+++ b/7.html
@@ -323,7 +323,7 @@
       <br>
       <h2>TITLE HEADING</h2>
       <h5>Title description, 03.11.2018</h5>
-      <div class="fakeimg"><img src="css/yaak.jpg" style="width:100%;"></div>
+      <div class="fakeimg"><iframe width="100%" src="https://www.youtube.com/embed/Hkqmtba3o5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   </div>
