--- a/7.html
+++ b/7.html
@@ -301,6 +301,8 @@
   <div>9</div>
   <div>10</div>
 </div>
+	    <h3> Використання flexbox для побудови сайту</h3>
+	    <a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_website2">Приклад на W3Schools</a>
              <div id="flexblocks">
         <div class="row2">
   <div class="side2">
