--- a/7.html
+++ b/7.html
@@ -302,8 +302,9 @@
   <div>10</div>
 </div>
 	    <h3> Використання flexbox для побудови сайту</h3>
-	    <a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_website2">Приклад на W3Schools</a>
+	   
              <div id="flexblocks">
+		      <a style="text-decoration:none; font size:20px; font-family:sans-serif" href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_website2">Приклад на W3Schools</a>
         <div class="row2">
   <div class="side2">
       <h3>Про нас</h3>
