--- a/bolvanka.html
+++ b/bolvanka.html
@@ -68,7 +68,7 @@
         <div class="intro-text">
           <div class="intro-lead-in">Welcome To Our Studio!</div>
           <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Дізнатися більше</a>
         </div>
       </div>
     </header>
@@ -78,8 +78,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Чим займаємося?</h2>
+            <h3 class="section-subheading text-muted">Наша студія займається наступними роботами</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -89,7 +89,7 @@
               <i class="fas fa-stack-1x fa-inverse">
                 <img class="svg" src="img/3dmod.svg" alt="3d Modelling"></i>
             </span>
-            <h4 class="service-heading">3D Modelling</h4>
+            <h4 class="service-heading">3D Моделювання</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
           <div class="col-md-4">
@@ -98,7 +98,7 @@
               <i class="fas fa-stack-1x fa-inverse">
                 <img class="svg" src="img/uv_map.svg" alt="Texturing"></i>
             </span>
-            <h4 class="service-heading">Texturing</h4>
+            <h4 class="service-heading">Текстурування</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
           <div class="col-md-4">
@@ -107,7 +107,7 @@
               <i class="fas fa-stack-1x fa-inverse">
                 <img class="svg" src="img/phgram.svg" alt="Photogrammetry"></i>
             </span>
-            <h4 class="service-heading">Photogrammetry</h4>
+            <h4 class="service-heading">Фотограметрія</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
         </div>
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
+            <h2 class="section-heading text-uppercase">Портфоліо</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
@@ -417,8 +417,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Напишіть нам</h2>
+            <h3 class="section-subheading text-muted">Завжди раді листав від Вас</h3>
           </div>
         </div>
         <div class="row">
@@ -448,7 +448,7 @@
                 <div class="clearfix"></div>
                 <div class="col-lg-12 text-center">
                   <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Надіслати</button>
                 </div>
               </div>
             </form>
@@ -462,7 +462,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; Horsedrown Studios 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
@@ -486,10 +486,10 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
+                <a href="#">Політика конфеденційності</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+                <a href="#">Правила використання</a>
               </li>
             </ul>
           </div>
