--- a/bolvanka.html
+++ b/bolvanka.html
@@ -219,10 +219,10 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4>Станьте
-                    <br>Частиною
-                    <br>Нашої
-                    <br>Історії!</h4>
+                  <h4>А Ви
+                    <br>Погодували
+                    <br>Кота?
+                    </h4>
                 </div>
               </li>
             </ul>
