--- a/bolvanka.html
+++ b/bolvanka.html
@@ -241,7 +241,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-md-4 col-sm-12">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
               <h4>Kay Garland</h4>
@@ -265,7 +265,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-sm-12">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
               <h4>Larry Parker</h4>
@@ -289,7 +289,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-sm-12">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
               <h4>Diana Pertersen</h4>
