--- a/bolvanka.html
+++ b/bolvanka.html
@@ -145,6 +145,26 @@
               <h4>Маршрутка :D</h4>
               <p class="text-muted">Друга спроба освоїти Blender</p>
             </div>
+            <div class="col-md-4 col-sm-12 portfolio-item">
+                <iframe width="100%" height="400px"  src="https://sketchfab.com/models/0b91cd2f213e460ab7bbe6f296eac70d/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <div class="portfolio-caption">
+              <h4>Люк</h4>
+              <p class="text-muted">Матеріал створений з однієї фотографії</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 portfolio-item">
+                <iframe width="100%" height="400px" src="https://sketchfab.com/models/ac1d211cbf27446ebfb0f5b330838b61/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <div class="portfolio-caption">
+              <h4>Плитка 1</h4>
+              <p class="text-muted">Матеріал створений з однієї фотографії</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 portfolio-item">
+                <iframe width="100%" height="400px" src="https://sketchfab.com/models/0bc2dd2657da41979d1417d34d4a879c/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <div class="portfolio-caption">
+              <h4>Плитка 2</h4>
+              <p class="text-muted">Матеріал створений з однієї фотографії</p>
+            </div>
           </div>
         </div>
     </section>
