--- a/bolvanka.html
+++ b/bolvanka.html
@@ -145,6 +145,7 @@
               <h4>Маршрутка :D</h4>
               <p class="text-muted">Друга спроба освоїти Blender</p>
             </div>
+            </div>
             <div class="col-md-4 col-sm-12 portfolio-item">
                 <iframe width="100%" height="400px"  src="https://sketchfab.com/models/0b91cd2f213e460ab7bbe6f296eac70d/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             <div class="portfolio-caption">
