--- a/ShoShop/index.html
+++ b/ShoShop/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">    
     </head>
     <style>
 
