--- a/bolvanka.html
+++ b/bolvanka.html
@@ -171,84 +171,29 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+ <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Про нас</h2>
-            <h3 class="section-subheading text-muted">ДАна історія немає нічого спільного з реальністю</h3>
+            <h2 class="section-heading text-uppercase">Галерея</h2>
+            <h3 class="section-subheading text-muted">Далі представлені зображення з останнього проекту</h3>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <ul class="timeline">
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>2009-2011</h4>
-                    <h4 class="subheading">Перші ідеї</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">Заснування студії</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Грудень 2012</h4>
-                    <h4 class="subheading">Вихід на повну зайнятість</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Липень 2014</h4>
-                    <h4 class="subheading">Розширення</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <h4>А Ви
-                    <br>Погодували
-                    <br>Кота?
-                    </h4>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
+      <div class="gallery">
+			<a href="img/image1.jpg" class="big"><img src="img/thumbs/thumb1.jpg" alt="" title="Beautiful Image" /></a>
+			<a href="img/image2.jpg"><img src="img/thumbs/thumb2.jpg" alt="" title=""/></a>
+			<a href="img/image3.jpg"><img src="img/thumbs/thumb3.jpg" alt="" title="Beautiful Image"/></a>
+			<a href="img/image4.jpg"><img src="img/thumbs/thumb4.jpg" alt="" title=""/></a>
+			<div class="clear"></div>
+
+			<a href="img/image5.jpg"><img src="img/thumbs/thumb5.jpg" alt="" title=""/></a>
+			<a href="img/image6.jpg"><img src="img/thumbs/thumb6.jpg" alt="" title=""/></a>
+			<a href="img/image7.jpg" class="big"><img src="img/thumbs/thumb7.jpg" alt="" title=""/></a>
+			<a href="img/image8.jpg"><img src="img/thumbs/thumb8.jpg" alt="" title=""/></a>
+			<div class="clear"></div>
+
+
+		</div>
       </div>
     </section>
 
