--- a/bolvanka.html
+++ b/bolvanka.html
@@ -23,7 +23,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/agency.css" rel="stylesheet">
-
+    <link href='css/simplelightbox.min.css' rel='stylesheet' type='text/css'>
   </head>
 
   <body id="page-top">
@@ -591,7 +591,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
-
+    <script type="text/javascript" src="js/simple-lightbox.js"></script>
   </body>
 
 </html>
