--- a/bolvanka.html
+++ b/bolvanka.html
@@ -45,7 +45,7 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Портфоліо</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Про нас</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Галерея</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Команда</a>
