--- a/bolvanka.html
+++ b/bolvanka.html
@@ -180,16 +180,16 @@
           </div>
         </div>
       <div class="gallery">
-			<a href="img/image1.jpg" class="big"><img src="img/thumbs/thumb1.jpg" alt="" title="Beautiful Image" /></a>
-			<a href="img/image2.jpg"><img src="img/thumbs/thumb2.jpg" alt="" title=""/></a>
-			<a href="img/image3.jpg"><img src="img/thumbs/thumb3.jpg" alt="" title="Beautiful Image"/></a>
-			<a href="img/image4.jpg"><img src="img/thumbs/thumb4.jpg" alt="" title=""/></a>
+			<a href="img/image1.jpg" class="big" target="_blank"><img src="img/thumbs/thumb1.jpg" alt="" title="Beautiful Image" /></a>
+			<a href="img/image2.jpg" target="_blank"><img src="img/thumbs/thumb2.jpg" alt="" title=""/></a>
+			<a href="img/image3.jpg" target="_blank"><img src="img/thumbs/thumb3.jpg" alt="" title="Beautiful Image"/></a>
+			<a href="img/image4.jpg" target="_blank"><img src="img/thumbs/thumb4.jpg" alt="" title=""/></a>
 			<div class="clear"></div>
 
-			<a href="img/image5.jpg"><img src="img/thumbs/thumb5.jpg" alt="" title=""/></a>
-			<a href="img/image6.jpg"><img src="img/thumbs/thumb6.jpg" alt="" title=""/></a>
-			<a href="img/image7.jpg" class="big"><img src="img/thumbs/thumb7.jpg" alt="" title=""/></a>
-			<a href="img/image8.jpg"><img src="img/thumbs/thumb8.jpg" alt="" title=""/></a>
+			<a href="img/image5.jpg" target="_blank"><img src="img/thumbs/thumb5.jpg" alt="" title=""/></a>
+			<a href="img/image6.jpg" target="_blank"><img src="img/thumbs/thumb6.jpg" alt="" title=""/></a>
+			<a href="img/image7.jpg" class="big" target="_blank"><img src="img/thumbs/thumb7.jpg" alt="" title=""/></a>
+			<a href="img/image8.jpg" target="_blank"><img src="img/thumbs/thumb8.jpg" alt="" title=""/></a>
 			<div class="clear"></div>
 
 
